# api/models/SideDishModel.js
@@ -3,7 +3,7 @@ const mongoose = require('mongoose');
 const sideDishSchema = new mongoose.Schema({
     name: { type: String, required: true },
     description: { type: String, required: true },
-    category: { type: String, enum: ['food', 'drink'], required: true},
+    category: { type: String, required: true },
     imageUrl: { type: String, required: true },
     price: { type: Number, min: 0, required: true },
     orderCount: { type: Number, min: 0, required: true, default: 0 }
